# polyglot

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README1.4w  TODO  adapter.cpp  adapter.h  attack.c  attack.h  board.c  board.h  book.c  book.cpp  book.h  book_format.html  book_make.c  book_make.cpp  book_make.h  book_merge.c  colour.c  colour.h  config.h  config.h.in  configure  configure.ac  engine.c  engine.cpp  engine.h  epd.c  epd.cpp  fen.c  fen.cpp  fen.h  game.c  game.h  gui.c  gui.cpp  (+66 more)
debian/: changelog  control  files  polyglot.substvars  rules
src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README1.4  README1.4w10UCI  TODO  adapter.cpp  adapter.h  attack.c  attack.cpp  attack.h  board.c  board.cpp  board.h  book.c  book.cpp  book.h  book_format.html  book_make.c  book_make.cpp  book_make.h  book_merge.c  book_merge.cpp  colour.c  colour.h  config.h  config.h.in  configure  configure.ac  engine.c  engine.cpp  epd.c  epd.cpp  fen.c  fen.cpp  fen.h  game.c  game.cpp  (+74 more)
src/debian/: README  changelog  copyright  docs
